...
            android:layout_marginEnd="@dimen/margin_24"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo_main_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
            android:id="@+id/ib_vivareal_main_activity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:src="@drawable/logo_vivareal"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginStart="@dimen/margin_24"
...
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/shape_botao_vivareal_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitulo_main_activity"/>

    <ImageButton
            android:id="@+id/ib_zap_main_activity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:src="@drawable/logo_zap"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginStart="@dimen/margin_24"
...
