...
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@+id/tv_buildingType_building_activity"
            app:layout_constraintStart_toStartOf="@+id/tv_buildingType_building_activity"/>

    <TextView
            android:id="@+id/tv_quartos_building_activity"
            android:text="@string/quartos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toTopOf="@+id/tv_num_quartos_building_activity"
            app:layout_constraintStart_toEndOf="@+id/tv_num_quartos_building_activity"/>

...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            app:layout_constraintTop_toTopOf="@+id/tv_num_quartos_building_activity"
            app:layout_constraintStart_toEndOf="@+id/tv_quartos_building_activity"/>

    <TextView
            android:id="@+id/tv_banheiros_building_fragment"
            android:text="@string/banheiros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toTopOf="@+id/tv_num_quartos_building_activity"
            app:layout_constraintStart_toEndOf="@+id/tv_num_banheiros_building_activity"/>
...
