...
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo_vivareal_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_vivareal_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/building_item"
            app:layout_constraintStart_toStartOf="parent"
...
